--- a/steffunky-backoffice-lunar-eclipse-theme/scss/style.scss
+++ b/steffunky-backoffice-lunar-eclipse-theme/scss/style.scss
@@ -1,21 +1,5 @@
-.dataTable {
-    @each $sColorLabel, $aAttributes in $ibo-vendors-datatables--row-highlight--colors {
-        $sBgColor: nth($aAttributes, 1);
-        tr.ibo-is-#{$sColorLabel}{
-          color: $sBgColor;
-          &:nth-child(odd) {
-            background-color: $ibo-vendors-datatables--row--background-color--is-odd;
-          }
-        
-          &:nth-child(even) {
-            background-color: $ibo-vendors-datatables--row--background-color--is-even;
-          }
-          &:hover, &.selected:hover {
-            background-color: $ibo-datatable--row--background-color--is-hover;
-          }
-          &.selected {
-            background-color: $ibo-datatable--row--background-color--is-selected;
-          }
-        }
-      }
+.ibo-is-html-content pre{
+  color: $ibo-color-white-100;
+  background-color: $ibo-color-grey-700;
+  border: 1px solid $ibo-color-grey-600;
 }
